WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313525
[Site Isolation] http/tests/local/blob/navigate-blob.html fails
https://bugs.webkit.org/show_bug.cgi?id=313525
Summary
[Site Isolation] http/tests/local/blob/navigate-blob.html fails
Ryosuke Niwa
Reported
2026-04-27 23:55:58 PDT
http/tests/local/blob/navigate-blob.html fails under --site-isolation.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-04-28 00:13:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63773
EWS
Comment 2
2026-04-28 21:48:37 PDT
Committed
312259@main
(2471bc7150ce): <
https://commits.webkit.org/312259@main
> Reviewed commits have been landed. Closing PR #63773 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-28 21:49:12 PDT
<
rdar://problem/175820685
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug